# NAO-engine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.md  build.sh  configure.sh  mainpage.docs  qiproject.xml  say_ip_address.py  upload.sh  worktree
GUI/imperium/: mainwindow.cpp  mainwindow.h
GUI/imperium/Widgets/Network/: connect.cpp  connect.h
build-cross/config/modules/: NAOInterface.module
code_templates/: cpp_template.cpp  header_template.h
config/: main.config
config/modules/: Kinematics.module  myfile.lua  testmoduleone.module  tutorial.module
config/network/: host.lua
docs/: Doxyfile  Doxyfile.in
examples/custommain/: qiproject.xml
examples/examples/custommain/: CMakeLists.txt  custom_main.html  custom_main.rst
examples/examples/events/: events.cpp  events.html  qiproject.xml
examples/examples/helloworld/: CMakeLists.txt  example.rst  index.html  index.rst  qiproject.xml
examples/examples/module/myfirstlocalmodule/: qiproject.xml
examples/examples/module/myfirstproject/: qiproject.xml
examples/examples/sayhelloworld/: CMakeLists.txt  sayhelloworld.rst
examples/helloworld/: example.html  testhelloworld.cpp
examples/module/myfirstlocalmodule/: CMakeLists.txt
examples/module/myfirstproject/: main.cpp
examples/module/myfirstremotemodule/: CMakeLists.txt  qiproject.xml
examples/sayhelloworld/: CMakeCache.txt
gui/: .gitignore
gui/imperium/: imperium.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/imperium/networking/: payload.h  server.cpp  server.h
gui/imperium/widgets/network/: connect.cpp  connect.h  connect.ui
gui/imperium/widgets/networking/: connectwidget.cpp  connectwidget.h  connectwidget.ui
gui/imperium/widgets/robot_view/: robot_status_widget.cpp  robot_status_widget.h  robot_status_widget.ui  robotstatusbox.cpp  robotstatusbox.h  robotstatusbox.ui
include/: common.h
include/allib/alproxies/: alproxies.h
include/debug/: debugger.h.tmp  debugging.h  null_deleter.hpp
include/engine/main/: context.h  frame.h  mloader.h  schedule.h
include/engine/watchdogs/: watchdog.h
include/memory/: hal_data.h  hardware_data.h  intent.h  memory.h
include/modules/: module.h  module_macros.h
include/modules/base/: Arm.h  HALPriorityQueue.h  Head.h  LArm.h  LLeg.h  Leg.h  NAOInterface.h  NAOInterface.module  RArm.h  RLeg.h
include/modules/com/: networking.h  networking.module  udp_handler.h
include/modules/hal/: ananas_comosus.h  hal_access.h  hal_data.h  libnao.h  libpineapple.h
include/modules/hal/data_types/: joint_data.h  sensor_data.h
include/modules/helloworld/: HelloWorldModule.h  helloworld.module
include/modules/motion/: AnimationModule.h  Kinematics.h  Kinematics.module
include/modules/test/: plzworkmodule.h  testmoduleone.h  testmoduleone.module
include/modules/tutorial/: load_module.h  tutorial_module.h
include/util/: branch_macros.h  compile_macros.h  constants.h  enum_macros.h  hardwaremap.h  more_hardware_data.h
lib/luatables/: README.md
lib/luatables/.hg/: dirstate  hgrc  undo.desc
lib/luatables/.hg/cache/: branchheads-served
lib/luatables/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
lib/luatables/.hg/store/data/: _c_make_lists.txt.i  _c_o_p_y_i_n_g.i  _makefile.i  _r_e_a_d_m_e.md.i  lua.cc.i  luatables.cc.i  luatables.h.i  main.cc.i  model.lua.i  othermodel.lua.i  othertable.lua.i  sampledata.lua.i  table.lua.i  ~2ehgignore.i
lib/luatables/.hg/store/data/_c_make/: _find_unit_test++.cmake.i
lib/luatables/.hg/store/data/tests/: _c_make_lists.txt.i  _lua_tables_tests.cc.i  main.cc.i
lib/luatables/.hg/store/data/utils/: auto.lua.i  serialize.lua.h.i  serialize.lua.i
naoqi-env/.qi/: path.conf  worktree.xml
naoqi-env/halagent/: .gitignore  CMakeLists.txt  hal_access.cpp  hal_access.h  hal_data.h
naoqi-env/halagent/.qi/: path.conf  worktree.xml
naoqi-env/halagent/OLD/: hal_access.cpp  hal_access.h
naoqi-env/halagent/build-crosslinux/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
naoqi-env/halagent/build-crosslinux/sdk/share/qi/: path.conf
naoqi-env/halagent/build-linux64/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
naoqi-env/halagent/build-sys-linux-x86_64/: CMakeCache.txt  dependencies.cmake
naoqi-env/halagent/build-sys-linux-x86_64/sdk/share/qi/: path.conf
naoqi-env/halagent/data_types/: joint_data.h  sensor_data.h
naoqi_modules/.qi/: path.conf  worktree.xml
naoqi_modules/halagent/: .gitignore  CMakeLists.txt  hal_data.h  hal_experimental.cpp  hal_experimental.h  qiproject.xml
naoqi_modules/halagent/.qi/: path.conf  qibuild.xml
naoqi_modules/halagent/data_types/: hardware_data.h  more_hardware_data.h
src/: CMakeLists.txt  GPATH  GRTAGS  GSYMS  GTAGS
src/debug/: debug.cpp  debug_old.cpp.tmp  example.cpp
src/engine/: CMakeLists.txt
src/engine/main/: context.cpp  frame.cpp  mloader.cpp  schedule.cpp
src/engine/watchdogs/: CMakeLists.txt  watchdog.cpp
src/memory/: memory.cpp
src/modules/: CMakeLists.txt
src/modules/base/: Arm.cpp  HALPriorityQueue.cpp  Head.cpp  LArm.cpp  LLeg.cpp  Leg.cpp  NAOInterface.cpp  RArm.cpp  RLeg.cpp
src/modules/com/: networking.cpp  udp_handler.cpp
src/modules/hal/: hal_access.cpp  libnao.cpp  libpineapple.cpp
src/modules/helloworld/: HelloWorldModule.cpp
src/modules/motion/: AnimationModule.cpp  Kinematics.cpp
src/modules/test/: plzworkmodule.cpp  testmoduleone.cpp
src/modules/tutorial/: tutorial_module.cpp
src/util/: hardwaremap.cpp
test/: build_interprocess_test.sh  interprocess_test  interprocess_test.cpp  test.lua  test_luatables.cpp  udpclient.py
test/enum_reflection/: enum_list.h  enum_reflection_test.cpp  enum_reflection_test.h  reflect
worktree/core/events/: CMakeLists.txt  events.rst
worktree/core/module/myfirstproject/: CMakeLists.txt
worktree/core/sayhelloworld/: qiproject.xml  sayhelloworld.html
