if (${IS_CROSS} STREQUAL "TRUE")
	set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
	qi_create_bin(pineapple "watchdog.cpp")
	qi_use_lib(pineapple luatables lua dl)
else()
	set (CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-as-needed")
	qi_create_bin(pineapple "watchdog.cpp" "../main/mloader.cpp" "../../debug/debug.cpp")
    qi_use_lib(pineapple luatables lua dl PTHREAD)
    target_link_libraries(pineapple boost_system boost_log_setup boost_log boost_thread)
    set(Boost_USE_MULTITHREADED ON)
endif()
